[package]
name = "e-com"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-service = "2.0" # Added to resolve `actix_service` errors
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-argon2 = "2.0.0"
jsonwebtoken = "8.1"
uuid = { version = "1.3", features = ["v4"] }
futures = "0.3"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
